# koi

./: CHANGELOG.md  Cargo.toml  Makefile  README.md  build.rs
.github/workflows/: ci.yml
bundle/: Info.plist  build-app.sh  koi.icns
bundle/windows/: build-windows.ps1
docs/plans/: 2026-02-16-koi-terminal.md  2026-02-17-koi-v2-optimizations.md
scripts/: windows-smoke.ps1
src/: event.rs  fonts.rs  fonts_registrar.rs  gl.rs  main.rs  panes.rs  tabs.rs  terminal.rs
src/renderer/: atlas.rs  glyph_cache.rs  mod.rs  rects.rs  shader.rs  text.rs
tests/: pty_smoke.rs
