[package]
name = "koi"
version = "1.2.0"
edition = "2021"

[dependencies]
alacritty_terminal = "0.25.1"
crossfont = "0.8.0"
glutin = "0.32.2"
glutin-winit = "0.5.0"
winit = "0.30.9"
raw-window-handle = "0.6"
log = "0.4"
env_logger = "0.11"
bitflags = "2"
unicode-width = "0.2"
parking_lot = "0.12"
arboard = { version = "3", features = ["image-data"] }
image = { version = "0.25", default-features = false, features = ["png"] }

[build-dependencies]
gl_generator = "0.14"
